--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 </head>
 <body>
     <div class="main">
+        <div class="credit">
+            <div class="Title">
+                TicTacToe
+            </div>
+            <div class="creator">
+                -By Animesh Mohite    
+            </div>
+        </div>
+
+
     <div class="board">
         <div class="row1">
             <button id="one">1</button>
